@@ -1,3 +1,8 @@
+1998-04-24  Federico Mena Quintero  <federico@nuclecu.unam.mx>
+
+	* minefield.c (gtk_minefield_draw): Fixed off-by-one mine
+	repainting bug.
+
 1998-04-16  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
 	* gnomine.c: Add range verification.
